# Mandelbrot-Visualizer

./: CMakeLists.txt  Readme.md
include/MandelBrot/: ColourSpace.hpp  Constants.hpp  Fractal.hpp  HSV.hpp  RGB.hpp  Settings.hpp  VariadicTable.hpp
src/: HSV.cpp  RGB.cpp  Settings.cpp  mandelbrot.cpp
test/: CMakeLists.txt  test_Fractal.cpp  test_HSV.cpp  test_RGB.cpp  test_Settings.cpp  test_mandelbrot.cpp
